--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -22,7 +22,7 @@
 					 <div data-th-replace="metronic/partials/_content/base"></div>
 				</div> -->
 
-				<div data-th-replace="metronic/partials/_footer/base"></div>
+				<div data-th-replace="partials/_footer/base"></div>
 			</div>
 		</div>
 	</div>
