--- a/src/main/resources/templates/transaction/tran-a-day.html
+++ b/src/main/resources/templates/transaction/tran-a-day.html
@@ -1,41 +1,272 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org"
-      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout" xmlns:sec="http://www.thymeleaf.org/extras/spring-security"
-      layout:decorator="admin/common/template">
-    <body>
-        <div layout:fragment="content" th:remove="tag">
-            <div class="container-fluid">
-                <div class="mdc-card">
-                    <h6 class="card-title mb-3">Lịch sử giao dịch</h6>
-                    <hr />
-<!--                    <th:block th:replace="detail.html"></th:block>-->
 
-                    <div class="table-responsive mt-5">
-                        <table class="table table-striped table-bordered table-hover dataTable">
-                            <thead>
-                                <tr>
-                                    <th class="text-left" rowspan="2">STT</th>
-                                    <th rowspan="2">Họ và tên</th>
-                                    <th rowspan="2">Chẩn đoán bệnh</th>
-                                    <th rowspan="2">Thủ thuật</th>
-                                    <th rowspan="2">Thuốc</th>
-                                    <th colspan="2">Thu</th>
-                                    <th colspan="2">Thanh toán</th>
-                                    <th rowspan="2">Ghi chú</th>
-                                </tr>
-                                <tr>
-                                    <th>Thủ thuật</th>
-                                    <th>Thuốc</th>
-                                    <th>Trước</th>
-                                    <th>Sau</th>
-                                </tr>
-                            </thead>
-                            <tbody id="tbody-list"></tbody>
-                        </table>
+<!--
+Template Name: Metronic - Responsive Admin Dashboard Template build with Twitter Bootstrap 4 & Angular 8
+Author: KeenThemes
+Website: http://www.keenthemes.com/
+Contact: support@keenthemes.com
+Follow: www.twitter.com/keenthemes
+Dribbble: www.dribbble.com/keenthemes
+Like: www.facebook.com/keenthemes
+Purchase: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
+Renew Support: http://themeforest.net/item/metronic-responsive-admin-dashboard-template/4021469?ref=keenthemes
+License: You must have a valid license purchased only from themeforest(the above link) in order to legally use the theme for your project.
+-->
+<html lang="en">
+
+<!-- begin::Head -->
+
+<head>
+    <base href="../../">
+    <meta charset="utf-8"/>
+    <title>Giao dịch trong tháng</title>
+    <meta name="description" content="Basic calendar examples">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
+    <!--begin::Fonts -->
+    <link rel="stylesheet"
+          href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700|Roboto:300,400,500,600,700">
+
+    <!--end::Fonts -->
+
+    <!--begin::Page Vendors Styles(used by this page) -->
+    <link href="assets/plugins/custom/fullcalendar/fullcalendar.bundle.css" rel="stylesheet" type="text/css"/>
+
+    <!--end::Page Vendors Styles -->
+
+    <!--begin::Global Theme Styles(used by all pages) -->
+    <link href="assets/plugins/global/plugins.bundle.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/style.bundle.css" rel="stylesheet" type="text/css"/>
+
+    <!--end::Global Theme Styles -->
+
+    <!--begin::Layout Skins(used by all pages) -->
+    <link href="assets/css/skins/header/base/light.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/skins/header/menu/light.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/skins/brand/dark.css" rel="stylesheet" type="text/css"/>
+    <link href="assets/css/skins/aside/dark.css" rel="stylesheet" type="text/css"/>
+
+    <!--end::Layout Skins -->
+    <link rel="shortcut icon" href="assets/media/logos/favicon.ico"/>
+</head>
+
+<!-- end::Head -->
+
+<!-- begin::Body -->
+
+<body class="kt-aside--enabled kt-aside--fixed kt-page--loading">
+<!-- begin:: Page -->
+
+<div class="kt-grid kt-grid--hor kt-grid--root">
+    <div class="kt-grid__item kt-grid__item--fluid kt-grid kt-grid--ver kt-page">
+
+        <!-- begin:: Aside -->
+
+        <!-- Uncomment this to display the close button of the panel-->
+        <!-- <button class="kt-aside-close " id="kt_aside_close_btn"><i class="la la-close"></i></button> -->
+        <div data-th-replace="partials/_aside/base"></div>
+
+        <div class="kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor kt-wrapper" id="kt_wrapper">
+            <div class="kt-content  kt-grid__item kt-grid__item--fluid kt-grid kt-grid--hor" id="kt_content">
+                <!-- begin:: Content -->
+                <div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
+                    <div class="row">
+                        <div class="col-lg-12">
+
+                            <!--begin::Portlet-->
+                            <div class="kt-portlet">
+                                <div class="kt-portlet__head">
+                                    <div class="kt-portlet__head-label">
+                                        <h3 class="kt-portlet__head-title">
+                                            Bảng thu chi trong ngày
+                                        </h3>
+
+                                    </div>
+                                    <button type="button" class="btn btn-success" data-toggle="modal"
+                                            data-target="#kt_modal_6" data-backdrop="static" data-keyboard="false">Thêm
+                                        mới
+                                    </button>
+                                </div>
+                                <div class="kt-portlet__body">
+                                    <!--begin::Section-->
+                                    <div class="kt-section">
+                                        <div class="kt-section__content">
+                                            <div class="table-responsive">
+                                                <table class="table table-bordered">
+                                                    <thead>
+                                                    <tr>
+                                                        <th style="text-align: center; vertical-align: middle;"
+                                                            class="text-left" rowspan="2">STT
+                                                        </th>
+                                                        <th style="text-align: center; vertical-align: middle;"
+                                                            class="text-center" rowspan="2">Họ
+                                                            và tên
+                                                        </th>
+                                                        <th style="text-align: center; vertical-align: middle;"
+                                                            class="text-center" rowspan="2">Chẩn
+                                                            đoán bệnh
+                                                        </th>
+                                                        <th style="text-align: center; vertical-align: middle;"
+                                                            class="text-center" rowspan="2">Thủ
+                                                            thuật
+                                                        </th>
+                                                        <th style="text-align: center; vertical-align: middle;"
+                                                            class="text-center" rowspan="2">
+                                                            Thuốc
+                                                        </th>
+                                                        <th style="text-align: center; vertical-align: middle;"
+                                                            class="text-center" colspan="2">
+                                                            Thu
+                                                        </th>
+                                                        <th style="text-align: center; vertical-align: middle;"
+                                                            class="text-center" colspan="2">
+                                                            Thanh toán
+                                                        </th>
+                                                        <th style="text-align: center; vertical-align: middle;"
+                                                            class="text-center" rowspan="2">Ghi
+                                                            chú
+                                                        </th>
+                                                        <th style="text-align: center; vertical-align: middle;"
+                                                            class="text-center" rowspan="2">Hành
+                                                            động
+                                                        </th>
+                                                    </tr>
+                                                    <tr>
+                                                        <th style="text-align: center; vertical-align: middle;"
+                                                            class="text-center">Thủ thuật
+                                                        </th>
+                                                        <th style="text-align: center; vertical-align: middle;"
+                                                            class="text-center">Thuốc
+                                                        </th>
+                                                        <th style="text-align: center; vertical-align: middle;"
+                                                            class="text-center">Trước
+                                                        </th>
+                                                        <th style="text-align: center; vertical-align: middle;"
+                                                            class="text-center">Sau
+                                                        </th>
+                                                    </tr>
+                                                    </thead>
+                                                    <tbody id="tbody-list">
+                                                    </tbody>
+                                                </table>
+                                            </div>
+                                            <div id="list-pagination"></div>
+                                        </div>
+                                    </div>
+
+                                    <!--end::Section-->
+                                </div>
+
+                                <!--end::Form-->
+                            </div>
+                            <!--end::Portlet-->
+                        </div>
                     </div>
-                    <div id="list-pagination"></div>
+                </div>
+
+                <!-- end:: Content -->
+            </div>
+            <!-- Modal -->
+            <div class="modal fade" id="kt_modal_6" tabindex="-1" role="dialog"
+                 aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+                <div class="modal-dialog modal-dialog-centered modal-lg" role="document">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title" id="exampleModalLongTitle">Thêm mới giao dịch</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                            </button>
+                        </div>
+                        <div class="modal-body">
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <label>Tên bệnh nhân</label>
+                                    <input type="text" class="form-control material-input"
+                                           placeholder="Nhập họ và tên nhân viên" id="name">
+                                </div>
+                                <div class="col-lg-6">
+                                    <label>Chẩn đoán</label>
+                                    <input type="text" class="form-control material-input" placeholder="Chẩn đoán"
+                                           id="exam">
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-6">
+                                    <label>Thủ thuật</label>
+                                    <input type="text" class="form-control material-input" id="procedure">
+                                </div>
+                                <div class="col-lg-6">
+                                    <label>Thuốc</label>
+                                    <input type="text" class="form-control material-input" id="medicine">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Đóng</button>
+                            <button type="button" class="btn btn-primary">Lưu thông tin</button>
+                        </div>
+                    </div>
                 </div>
             </div>
+            <div data-th-replace="partials/_footer/base"></div>
+
         </div>
-    </body>
+    </div>
+</div>
+
+<th:block th:replace="transaction/detail.html"></th:block>
+<!-- end:: Page -->
+
+<!-- begin::Global Config(global config for global JS sciprts) -->
+<script>
+    var KTAppOptions = {
+        "colors": {
+            "state": {
+                "brand": "#5d78ff",
+                "dark": "#282a3c",
+                "light": "#ffffff",
+                "primary": "#5867dd",
+                "success": "#34bfa3",
+                "info": "#36a3f7",
+                "warning": "#ffb822",
+                "danger": "#fd3995"
+            },
+            "base": {
+                "label": [
+                    "#c5cbe3",
+                    "#a1a8c3",
+                    "#3d4465",
+                    "#3e4466"
+                ],
+                "shape": [
+                    "#f0f3ff",
+                    "#d9dffa",
+                    "#afb4d4",
+                    "#646c9a"
+                ]
+            }
+        }
+    };
+</script>
+
+<!-- end::Global Config -->
+
+<!--begin::Global Theme Bundle(used by all pages) -->
+<script src="assets/plugins/global/plugins.bundle.js" type="text/javascript"></script>
+<script src="assets/js/scripts.bundle.js" type="text/javascript"></script>
+
+<!--end::Global Theme Bundle -->
+
+<!--begin::Page Vendors(used by this page) -->
+<script src="assets/plugins/custom/fullcalendar/fullcalendar.bundle.js" type="text/javascript"></script>
+
+<!--end::Page Vendors -->
+
+<!--begin::Page Scripts(used by this page) -->
+<script src="assets/js/pages/components/calendar/basic.js" type="text/javascript"></script>
+
+<!--end::Page Scripts -->
+</body>
+
+<!-- end::Body -->
+
 </html>
