--- a/src/main/resources/templates/partials/_aside/_menu.html
+++ b/src/main/resources/templates/partials/_aside/_menu.html
@@ -14,7 +14,7 @@
 				<h4 class="kt-menu__section-text">Khách hàng</h4>
 				<i class="kt-menu__section-icon flaticon-more-v2"></i>
 			</li>
-			<li class="kt-menu__item  kt-menu__item--submenu" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="/clinic" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+			<li class="kt-menu__item  kt-menu__item--submenu" aria-haspopup="true" data-ktmenu-submenu-toggle="hover"><a href="/customer" class="kt-menu__link kt-menu__toggle"><span class="kt-menu__link-icon"><svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
 							<g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
 								<rect x="0" y="0" width="24" height="24" />
 								<rect fill="#000000" x="4" y="4" width="7" height="7" rx="1.5" />
