update view customer and transaction

--- a/src/main/resources/templates/customer/index.html
+++ b/src/main/resources/templates/customer/index.html
@@ -20,7 +20,7 @@ License: You must have a valid license purchased only from themeforest(the above
     <base href="../../">
     <meta charset="utf-8"/>
     <title>Danh sách bệnh nhân</title>
-    <meta name="description" content="Basic calendar examples">
+    <meta name="description" content="Quản lý bệnh nhân">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!--begin::Fonts -->
