--- a/src/main/resources/templates/transaction/tran-a-day.html
+++ b/src/main/resources/templates/transaction/tran-a-day.html
@@ -162,7 +162,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     class="text-center" rowspan="2">Ghi
                                                     chú
                                                 </th>
-                                                <th style="text-align: center; vertical-align: middle;"
+                                                <th style="text-align: center; vertical-align: middle; width: 10%;"
                                                     class="text-center" rowspan="2">
                                                     <button type="button" class="btn btn-success " data-toggle="modal"
                                                             data-target="#kt_select2_modal" data-backdrop="static"
@@ -211,7 +211,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                 <th style="text-align: center; vertical-align: middle;"
                                                     class="text-center">Ghi chú
                                                 </th>
-                                                <th style="text-align: center; vertical-align: middle;"
+                                                <th style="text-align: center; vertical-align: middle; width: 10%;"
                                                     class="text-center">
                                                     <button type="button" class="btn btn-warning" data-toggle="modal"
                                                             data-target="#kt_modal_3" data-backdrop="static"
@@ -264,11 +264,11 @@ License: You must have a valid license purchased only from themeforest(the above
                                     <label>Thủ thuật</label>
                                     <select class="form-control kt-select2" id="kt_select2_3_modal" name="param"
                                             multiple="multiple">
-                                        <option value="CT">Điện châm</option>
+                                        <!-- <option value="CT">Điện châm</option>
                                         <option value="DE">Siêu âm</option>
                                         <option value="FL">Hồng Ngoại</option>
                                         <option value="GA">Hơ Ngải</option>
-                                        <option value="IN">Xoa bóp</option>
+                                        <option value="IN">Xoa bóp</option> -->
                                     </select>
                                 </div>
                                 <div class="col-lg-4">
