update giao dien

--- a/src/main/resources/templates/customer/index.html
+++ b/src/main/resources/templates/customer/index.html
@@ -99,7 +99,7 @@ License: You must have a valid license purchased only from themeforest(the above
                             </div>
 
                         </div>
-                        <div class="kt-portlet__body ">
+                        <div class="kt-portlet__body "  style="font-size: x-small;">
                             <div class="kt-section ">
                                 <div class="kt-section__content">
                                     <div class="table-responsive">
@@ -121,7 +121,7 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     chú
                                                 </th>
                                                 <th style="text-align: center; vertical-align: middle;width: 10%">
-                                                    <button type="button" class="btn btn-success ">Thêm mới
+                                                    <button type="button" class="btn btn-success btn-circle btn-icon"><i class="flaticon2-plus"></i>
                                                     </button>
                                                 </th>
                                             </tr>
