--- a/src/main/resources/templates/transaction/tran-a-day.html
+++ b/src/main/resources/templates/transaction/tran-a-day.html
@@ -64,7 +64,7 @@ License: You must have a valid license purchased only from themeforest(the above
         }
 
         .body1 {
-            height: 90%;
+            height: 100%;
         }
 
         .earn {
@@ -76,7 +76,7 @@ License: You must have a valid license purchased only from themeforest(the above
         }
 
         .spend {
-            height: 15%;
+            height: 20%;
         }
 
         .vertical-center {
@@ -130,7 +130,7 @@ License: You must have a valid license purchased only from themeforest(the above
                             </div>
 
                         </div>
-                        <div class="kt-portlet__body body1">
+                        <div class="kt-portlet__body body1" style="font-size: x-small;">
                             <div class="kt-section body1">
                                 <div class="kt-section__content body1">
                                     <div class="table-responsive earn">
@@ -149,31 +149,26 @@ License: You must have a valid license purchased only from themeforest(the above
                                                     đoán bệnh
                                                 </th>
                                                 <th style="text-align: center; vertical-align: middle;"
-                                                    class="text-center" rowspan="2">Thủ
-                                                    thuật
+                                                    class="text-center" rowspan="2">Thủ thuật
                                                 </th>
                                                 <th style="text-align: center; vertical-align: middle;"
-                                                    class="text-center" rowspan="2">
-                                                    Thuốc
+                                                    class="text-center" rowspan="2"> Thuốc
                                                 </th>
                                                 <th style="text-align: center; vertical-align: middle;"
-                                                    class="text-center" colspan="2">
-                                                    Thu
+                                                    class="text-center" colspan="2"> Thu
                                                 </th>
                                                 <th style="text-align: center; vertical-align: middle;"
-                                                    class="text-center" colspan="2">
-                                                    Thanh toán
+                                                    class="text-center" colspan="2"> Thanh toán
                                                 </th>
                                                 <th style="text-align: center; vertical-align: middle;"
-                                                    class="text-center" rowspan="2">Ghi
-                                                    chú
+                                                    class="text-center" rowspan="2">Ghi chú
                                                 </th>
                                                 <th style="text-align: center; vertical-align: middle; width: 10%;"
 
                                                     class="text-center" rowspan="2">
-                                                    <button type="button" class="btn btn-success " data-toggle="modal"
+                                                    <button type="button" class="btn btn-success btn-circle btn-icon" data-toggle="modal"
                                                             data-target="#kt_select2_modal" data-backdrop="static"
-                                                            data-keyboard="false">Thêm mới
+                                                            data-keyboard="false"><i class="flaticon2-plus"></i>
                                                     </button>
                                                 </th>
                                             </tr>
@@ -221,11 +216,10 @@ License: You must have a valid license purchased only from themeforest(the above
                                                 <th style="text-align: center; vertical-align: middle; width: 10%;"
 
                                                     class="text-center">
-                                                    <button type="button" class="btn btn-warning" data-toggle="modal"
-                                                            data-target="#kt_modal_3" data-backdrop="static"
-                                                            data-keyboard="false">Chi tiền
+                                                    <button type="button" class="btn btn-warning  btn-circle btn-icon" data-toggle="modal"
+                                                            data-target="#kt_modal_3" data-backdrop="static" 
+                                                            data-keyboard="false"><i class="flaticon2-plus"></i>
                                                     </button>
-                                                </th>
                                                 </th>
                                             </tr>
                                             </thead>
@@ -259,11 +253,11 @@ License: You must have a valid license purchased only from themeforest(the above
                                     <input type="text" list="lst_name" class="form-control material-input"
                                            placeholder="Nhập họ và tên bệnh nhân" id="name">
                                     <datalist id="lst_name">
-                                        <option value="Edge">
+                                        <!-- <option value="Edge">
                                         <option value="Firefox">
                                         <option value="Chrome">
                                         <option value="Opera">
-                                        <option value="Safari">
+                                        <option value="Safari"> -->
                                     </datalist>
                                 </div>
                                 <div class="col-lg-6">
@@ -277,11 +271,6 @@ License: You must have a valid license purchased only from themeforest(the above
                                     <label>Thủ thuật</label>
                                     <select class="form-control kt-select2" id="kt_select2_3_modal" name="param"
                                             multiple="multiple">
-                                        <!-- <option value="CT">Điện châm</option>
-                                        <option value="DE">Siêu âm</option>
-                                        <option value="FL">Hồng Ngoại</option>
-                                        <option value="GA">Hơ Ngải</option>
-                                        <option value="IN">Xoa bóp</option> -->
                                     </select>
                                 </div>
                                 <div class="col-lg-4">
